# DevSetup

./: README.md
Clang/: .gitignore  0-InstallDependencies.cmd  1-BuildClang.cmd  CLangDefineEnvironmentVariables.cmd  ClangCommandPrompt.cmd  ClangPromptSetup.cmd  Help.ansi  Help.cmd  Part1.cmd  Part2.cmd
Clang/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  build.cmd  cmake_toolchain_clang.cmake
ansi/: debug.ans  j2i-1.ans  j2i-1.html  j2i-16.ansi.ans  j2i-16.html  j2i-256-160.ans  release.ans  x.ansi.ans
aws-cpp/: README.md  aws-cpp-sdk-setup.cmd
aws-cpp/samples/MinAwsProject/: MinAwsProject.cpp  MinAwsProject.sln  MinAwsProject.vcxproj  MinAwsProject.vcxproj.filters
aws-cpp/samples/ScreenShot/: Help.txt  Resource.aps  Resource.rc  SaveFileToS3.h  SaveToS3.cpp  ScreenShot.cpp  ScreenShot.sln  ScreenShot.vcxproj  ScreenShot.vcxproj.filters  ScreenShotOptions.cpp  ScreenShotOptions.h  resource.h
chromium/: build-chromium-and-v8.cmd  checkout-chromium-and-build.cmd  install-vs-components-and-build.cmd
v8/: README.md  argsv2.gn.txt  build-v8.cmd  x64.debug.args  x64.release.args
v8/sample/v8monolithlinktest/: v8monolithlinktest.sln
v8/sample/v8monolithlinktest/v8monolithlinktest/: v8monolithlinktest.cpp  v8monolithlinktest.vcxproj  v8monolithlinktest.vcxproj.filters
